# lan-server

./: .gitignore  PRODUCT.md  PROJECT.md  README.md  act.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
adapter-registry/: README.md  index.json
docs/: ADAPTER_REGISTRY.md  DEVELOPMENT_PROGRESS.md  DISTRIBUTION_DELIVERY_2026-06-07.md  FINAL_DELIVERY.md  FINAL_REFERENCE_UI_BACKEND_MATRIX.md  FRONTEND_BACKEND_API_MAP.md  FRONTEND_BACKEND_GAP_ANALYSIS.md  GAME_ADAPTER_WORKFLOW.md  GITHUB_RELEASE_DRAFT.md  GITHUB_RELEASE_UPDATE_RUNBOOK_2026-06-07.md  GOAL_COMPLETION_AUDIT.md  MVP_RELEASE_CHECKLIST.md  N2N_EDGE_AND_SUPERNODE.md  N2N_GUIDE.md  N2N_SUPERNODE_DEPLOY.md  NEXT_BIG_DIRECTIONS.md  PORT_PROXY_MVP.md  PRODUCT_MEMORY.md  REAL_DUAL_MACHINE_REGRESSION_2026-06-07.md  (+26 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/core/: capability_engine.rs  connectivity_tester.rs  diagnostic_logger.rs  game_detector.rs  game_launcher.rs  mod.rs  port_proxy.rs  process_util.rs  recommendation_engine.rs  server_session.rs  steam_relay.rs  udp_broadcast_bridge.rs  udp_proxy.rs
src-tauri/src/models/: diagnostics.rs  friend.rs  game.rs  mod.rs  network.rs  port_proxy.rs  recommendation.rs  server_session.rs  settings.rs  steam_relay.rs  udp_broadcast_bridge.rs  udp_proxy.rs
src-tauri/src/network/: backend.rs  manual_lan_backend.rs  mod.rs  n2n_backend.rs  radmin_backend.rs  windows_ip.rs
src-tauri/src/storage/: account_store.rs  adapter_store.rs  friend_store.rs  mod.rs  settings_store.rs
(+194 files in other folders)
